# recursive-cairo

./: .gitignore  Cargo.toml  README.md
cairo-components/hints/src/: answer.rs  composition.rs  decommitment.rs  evaluator.rs  fiat_shamir.rs  folding.rs  lib.rs
cairo-components/hints/src/decommitment/: interaction.rs  preprocessed.rs  trace.rs  utils.rs
cairo-components/interface/: Cargo.toml
cairo-components/recursive/answer/: Cargo.toml
cairo-components/recursive/answer/src/: data_structures.rs  lib.rs
cairo-components/recursive/answer/src/data_structures/: composition.rs  interaction.rs  preprocessed.rs  trace.rs
cairo-components/recursive/composition/: Cargo.toml
cairo-components/recursive/composition/src/: data_structures.rs  lib.rs
cairo-components/recursive/data_structures/: Cargo.toml
cairo-components/recursive/data_structures/src/: claim.rs  data_structures.rs  evaluator.rs  fiat_shamir.rs  interaction_claim.rs  lib.rs  lookup.rs  mask.rs  public_data.rs  stark_proof.rs  utils.rs
cairo-components/recursive/decommitment/: Cargo.toml
cairo-components/recursive/decommitment/src/: data_structures.rs  lib.rs  utils.rs
cairo-components/recursive/decommitment/src/data_structures/: composition.rs  interaction.rs  preprocessed.rs  trace.rs
cairo-components/recursive/fiat_shamir/: Cargo.toml
cairo-components/recursive/fiat_shamir/src/: lib.rs
cairo-components/recursive/folding/: Cargo.toml
cairo-components/recursive/folding/src/: lib.rs
components/recursive/answer/: Cargo.toml
components/recursive/answer/src/: data_structures.rs  lib.rs
components/recursive/composition/: Cargo.toml
components/recursive/composition/src/: data_structures.rs  lib.rs  plonk.rs  poseidon.rs
components/recursive/data_structures/: Cargo.toml
components/recursive/data_structures/src/: lib.rs
components/recursive/fiat_shamir/: Cargo.toml
components/recursive/fiat_shamir/src/: lib.rs
components/recursive/folding/: Cargo.toml
components/recursive/folding/src/: lib.rs
constraint_system/src/: lib.rs  var.rs
doc/: TODO.md  column_hasher.md  components.md  example_proof.md  folding.md  formality_check.md  oblivious_map.md  preprocessed_trace.md  progress.md  seq_franking.md
examples/multi-proofs/: Cargo.toml
examples/multi-proofs/benches/: verify_bench.rs
examples/multi-proofs/src/: main.rs
examples/single-proof/: Cargo.toml
examples/single-proof/src/: main.rs
primitives/: Cargo.toml
primitives/fields/src/: lib.rs
primitives/poseidon31/src/: lib.rs
primitives/src/: bits.rs  channel.rs  circle.rs  cm31.rs  fields.rs  lib.rs  line.rs  m31.rs  merkle.rs  oblivious_map.rs  option.rs  poseidon31.rs  qm31.rs  query.rs
primitives/src/poseidon31/: implementation.rs  parameters.rs
