[package]
name = "cairo-plonk-dsl-data-structures"
version = "0.1.0"
edition = "2021"

[dependencies]
stwo.workspace = true
stwo-examples.workspace = true
circle-plonk-dsl-primitives = { path = "../../../primitives" }
circle-plonk-dsl-constraint-system = { path = "../../../constraint_system" }
cairo-plonk-dsl-hints = { path = "../../hints" }
num-traits.workspace = true
cairo-air.workspace = true
stwo-cairo-common.workspace = true
bincode.workspace = true
stwo-constraint-framework.workspace = true
itertools.workspace = true
indexmap.workspace = true

[dev-dependencies]
rand.workspace = true
rand_chacha.workspace = true