[package]
name = "circle-plonk-dsl-answer"
version = "0.1.0"
edition = "2021"

[dependencies]
stwo.workspace = true
stwo-examples.workspace = true
stwo-constraint-framework.workspace = true
circle-plonk-dsl-fiat-shamir = { path = "../fiat_shamir" }
circle-plonk-dsl-primitives = { path = "../../../primitives" }
circle-plonk-dsl-hints = { path = "../../hints" }
circle-plonk-dsl-data-structures = { path = "../data_structures" }
circle-plonk-dsl-constraint-system = { path = "../../../constraint_system" }
bincode.workspace = true
num-traits.workspace = true
itertools.workspace = true
indexmap.workspace = true