[package]
name = "circle-plonk-dsl-composition"
version = "0.1.0"
edition = "2021"

[dependencies]
stwo.workspace = true
stwo-examples.workspace = true
stwo-constraint-framework.workspace = true
circle-plonk-dsl-primitives = { path = "../../../primitives" }
circle-plonk-dsl-data-structures = { path = "../data_structures" }
circle-plonk-dsl-constraint-system = { path = "../../../constraint_system" }
circle-plonk-dsl-hints = { path = "../../hints" }
bincode.workspace = true
itertools.workspace = true

[dev-dependencies]
num-traits = "0.2.19"