[package]
name = "circle-plonk-dsl-data-structures"
version = "0.1.0"
edition = "2021"

[dependencies]
stwo.workspace = true
stwo-examples.workspace = true
circle-plonk-dsl-primitives = { path = "../../../primitives" }
circle-plonk-dsl-constraint-system = { path = "../../../constraint_system" }
circle-plonk-dsl-hints = { path = "../../hints" }
num-traits.workspace = true

[dev-dependencies]
bincode.workspace = true