[package]
name = "circle-plonk-dsl-fiat-shamir"
version = "0.1.0"
edition = "2021"

[dependencies]
stwo.workspace = true
stwo-examples.workspace = true
circle-plonk-dsl-hints = { path = "../../hints" }
circle-plonk-dsl-primitives = { path = "../../../primitives" }
circle-plonk-dsl-constraint-system = { path = "../../../constraint_system" }
circle-plonk-dsl-data-structures = { path = "../data_structures" }
bincode.workspace = true
num-traits.workspace = true