[package]
name = "circle-plonk-dsl-folding"
version = "0.1.0"
edition = "2021"

[dependencies]
circle-plonk-dsl-answer = { path = "../answer" }
circle-plonk-dsl-hints = { path = "../../hints" }
circle-plonk-dsl-fiat-shamir = { path = "../fiat_shamir" }
circle-plonk-dsl-primitives = { path = "../../../primitives" }
circle-plonk-dsl-constraint-system = { path = "../../../constraint_system" }
circle-plonk-dsl-data-structures = { path = "../data_structures" }
num-traits.workspace = true
stwo.workspace = true
stwo-examples.workspace = true
bincode.workspace = true